--- a/redis/Dockerfile
+++ b/redis/Dockerfile
@@ -16,6 +16,8 @@ RUN curl -o /usr/local/bin/gosu -SL "https://github.com/tianon/gosu/releases/dow
 	&& rm /usr/local/bin/gosu.asc \
 	&& chmod +x /usr/local/bin/gosu
 
+RUN dnf install make
+
 # for redis-sentinel see: http://redis.io/topics/sentinel
 RUN mkdir -p /usr/src/redis \
 	&& curl -sSL "http://download.redis.io/releases/redis-${REDIS_VERSION}.tar.gz" -o redis.tar.gz \
